[package]
name = "gamecode-prompt"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Ed Sweeney <ed@onextent.com>"]
description = "System prompt management for gamecode applications"
repository = "https://github.com/navicore/gamecode-prompt"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
home = "0.5"
handlebars = "6.4"

[dev-dependencies]
tempfile = "3.25"
tracing-subscriber = "0.3"
